--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.quotecapture"
-        minSdkVersion 19
+        minSdkVersion var1
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
